5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1865_1645.log
== TEST (2019-07-04 10:21:21) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(vet):
	if(x>=2000):
		i=i+1
      print(i)
vet1=zeros(i,dtype=int)
y=0
for y in range(vet1):
	if(vet[y]>=2000):
		y=y+1
a=0
vet1[a]=y[a]

print(vet1)
-- ERROR:
File "XXXX", line 8
    print(i)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:31) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(vet):
	if(x>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)
y=0
for y in range(vet1):
	if(vet[y]>=2000):
		y=y+1
a=0
vet1[a]=y[a]

print(vet1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:01) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(vet[x]):
	if(x>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)
y=0
for y in range(vet1):
	if(vet[y]>=2000):
		y=y+1
a=0
vet1[a]=y[a]

print(vet1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:48) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(vet):
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)
y=0
for y in range(vet1):
	if(vet[y]>=2000):
		y=y+1
a=0
vet1[a]=y[a]

print(vet1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:07) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(vet):
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:42) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(vet[i]):
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:22) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range(shape(vet[i])):
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:18) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range vet:
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
File "XXXX", line 5
    for x in range vet:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:22) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range vet:
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
File "XXXX", line 5
    for x in range vet:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:23) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in range vet:
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
File "XXXX", line 5
    for x in range vet:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:42) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in vet:
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:29) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in vet:
	if(vet[i]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:14) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))

i=0
for x in vet:
	if(vet[x]>=2000):
		i=i+1
print(i)
vet1=zeros(i,dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:21) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))
qtdsaq=0
for i in range(vet):
	if(vet[i]>=2000):
		qtdsaq=qtdsaq+1
print(qtdsaq)		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:54) 
-- CODE:
from numpy import*
vet=array(eval(input("Digite o vetor: ")))
qtdsaq=0
for i in vet:
	if(vet[i]>=2000):
		qtdsaq=qtdsaq+1
print(qtdsaq)		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
